--- a/example/index.html
+++ b/example/index.html
@@ -17,7 +17,11 @@
   </head>
 
   <body>
+    <div class="header">
+      <div class="container-fluid">
 
+      </div>
+    </div>
   </body>
 
 </html>
