--- a/example/index.html
+++ b/example/index.html
@@ -16,11 +16,43 @@
       <title>Meetyou Angular UI</title>
   </head>
 
-  <body>
-    <div class="header">
-      <div class="container-fluid">
-
+  <body class="header-fixed">
+    <div class="header clearfix">
+      <div class="container-fluid col-10 clearfix">
+        <div class="logo">
+          <div>
+            <div class="logo-icon">
+              <img src="images/logo.jpg" alt="">
+            </div>
+            <div>
+              <div>美柚广告</div>品牌采买平台
+            </div>
+          </div>
+        </div>
+        <div class="container-fluid nav">
+          <ul>
+            <li ma-state="main">
+              <a href="#">首页</a>
+            </li>
+            <li>
+              <a href="#">我是菜单</a>
+            </li>
+            <li>
+              <a href="#">我是菜单</a>
+            </li>
+            <li>
+              <a href="#">我是菜单</a>
+            </li>
+          </ul>
+        </div>
+        <div class="info">
+          <div class="head"><img src="./images/ybb-icon.png" /></div>
+          <span class="nickname">美柚</span> | <a class="logout-font" href="#">退出</a>
+        </div>
       </div>
+    </div>
+    <div class="main clearfix">
+      <div class="container-fluid col-10" ui-view></div>
     </div>
   </body>
 
