--- a/example/index.html
+++ b/example/index.html
@@ -25,26 +25,14 @@
               <img src="images/logo.jpg" alt="">
             </div>
             <div>
-              <div>美柚广告</div>品牌采买平台
+              <div>美柚广告</div>后台控件库
             </div>
           </div>
         </div>
-        <div class="container-fluid nav">
-          <ul>
-            <li ma-state="main">
-              <a href="#">首页</a>
-            </li>
-            <li>
-              <a href="#">我是菜单</a>
-            </li>
-            <li>
-              <a href="#">我是菜单</a>
-            </li>
-            <li>
-              <a href="#">我是菜单</a>
-            </li>
-          </ul>
-        </div>
+        <ma-menu
+          class="container-fluid"
+          ma-routers="$root.routerConfig"
+        ></ma-menu>
         <div class="info">
           <div class="head"><img src="./images/ybb-icon.png" /></div>
           <span class="nickname">美柚</span> | <a class="logout-font" href="#">退出</a>
