--- a/example/index.html
+++ b/example/index.html
@@ -18,7 +18,7 @@
 
   <body class="header-fixed">
     <div class="header clearfix">
-      <div class="container-fluid col-10 clearfix">
+      <div class="container-fluid clearfix">
         <div class="logo">
           <div>
             <div class="logo-icon">
@@ -31,16 +31,18 @@
         </div>
         <ma-menu
           class="container-fluid"
-          ma-routers="$root.routerConfig"
-        ></ma-menu>
+          ma-routers="$root.routerConfig">
+            <ma-second-menu
+              ma-routers="$root.routerConfig"></ma-second-menu>
+        </ma-menu>
         <div class="info">
           <div class="head"><img src="./images/ybb-icon.png" /></div>
           <span class="nickname">美柚</span> | <a class="logout-font" href="#">退出</a>
         </div>
       </div>
     </div>
-    <div class="main clearfix">
-      <div class="container-fluid col-10" ui-view></div>
+    <div class="container-fluid col-10 main clearfix">
+      <div class="container-fluid" ui-view></div>
     </div>
   </body>
 
