--- a/example/404.html
+++ b/example/404.html
@@ -13,34 +13,17 @@
       <meta HTTP-EQUIV="expires" CONTENT="0">
       <meta http-equiv="Cache" content="no-cache">
       <meta name="format-detection" content="telephone=no">
-      <title>Meetyou Angular UI</title>
+      <title>404</title>
   </head>
 
-  <body class="header-fixed">
-    <div class="header clearfix">
-      <div class="container-fluid clearfix">
-        <div class="logo">
-          <div>
-            <div class="logo-icon">
-              <img src="images/logo.jpg" alt="">
-            </div>
-            <div>
-              <div>美柚广告</div>后台控件库
-            </div>
-          </div>
-        </div>
-        <ma-first-menu class="container-fluid">
-          <!-- <ma-second-menu></ma-second-menu> -->
-        </ma-first-menu>
-        <div class="info">
-          <div class="head"><img src="./images/ybb-icon.png" /></div>
-          <span class="nickname">美柚</span> | <a class="logout-font" href="#">退出</a>
+  <body>
+    <div class="empty-404-content">
+      <div class="page error-page">
+        <div class="article error-article">
+          <div class="empty-img"></div>
+          <p>页面不存在或已被删除</p>
         </div>
       </div>
-    </div>
-
-    <div class="container-fluid col-10 main clearfix">
-      <div ui-view></div>
     </div>
   </body>
 
