--- a/example/index.html
+++ b/example/index.html
@@ -25,7 +25,7 @@
               <img src="images/logo.jpg" alt="">
             </div>
             <div>
-              <div>美柚广告</div>后台控件库
+              <div>美柚广告</div>后台组件库
             </div>
           </div>
         </div>
