--- a/example/pages/utils/index.html
+++ b/example/pages/utils/index.html
@@ -34,11 +34,11 @@ console.log(angular.isNull(value));
     <h3>angular.isEmpty</h3>
     <div class="p">
       <code>
-@params value 要判断的值
+@params value 要判断的值，可判断空json和数组
 
 @return {Boolean} 是否为空
 
-const value = '';
+const value = {};
 console.log(angular.isEmpty(value));
       </code>
     </div>
