--- a/example/pages/utils/index.html
+++ b/example/pages/utils/index.html
@@ -1,6 +1,5 @@
 <ma-crumb-auto></ma-crumb-auto>
-<div ui-view
-  ma-ui-transition>
+<div ui-view>
   <div class="container"
     ma-full-container>
     <h2>angular 扩展</h2>
