--- a/example/index.html
+++ b/example/index.html
@@ -29,7 +29,7 @@
   <title>Meetyou Angular UI</title>
 </head>
 
-<body class="header-fixed">
+<body>
   <div class="header clearfix">
     <div class="container-fluid clearfix">
       <div class="logo">
